--- a/Abgaben/Packages/manifest.json
+++ b/Abgaben/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.ptc.vuforia.engine": "8.1.12",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.dots.editor": "0.8.2-preview",
+    "com.unity.entities": "0.11.2-preview.1",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.render-pipelines.universal": "7.6.0",
